# GeniusLib

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst
docs/guide/: examples.rst  quickstart.rst
docs/reference/: analytics.rst  cli.rst  client.rst  comparer.rst  exporter.rst  middleware.rst  models.rst  upgrade_tracker.rst  utils.rst
examples/: discord_bot.py  export_data.py  raid_reporter.py  war_analyzer.py
geniuslib/: __init__.py  abc.py  battlelog.py  battlelog_analytics.py  clans.py  cli.py  client.py  comparer.py  constants.py  entry_logs.py  enums.py  errors.py  events.py  exporter.py  formatters.py  game_data.py  hero.py  http.py  iterators.py  middleware.py  miscmodels.py  player_clan.py  players.py  raid.py  raid_analytics.py  spell.py  troop.py  upgrade_tracker.py  utils.py  war_analytics.py  war_attack.py  war_clans.py  war_members.py  wars.py
geniuslib/ext/discordlinks/: __init__.py
geniuslib/ext/triggers/: triggers.py
geniuslib/static/: static_data.json
tests/: conftest.py  test_battlelog_analytics.py  test_formatters.py  test_middleware.py  test_raid_analytics.py  test_utils.py  test_war_analytics.py
