[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "geniuslib"
authors = [{ name = "AkumaHalls" }]
maintainers = [{ name = "AkumaHalls" }]
version = "5.2.0"
description = "GeniusLib - Biblioteca Python assíncrona para a API do Clash of Clans"
requires-python = ">=3.10.0"
readme = "README.md"
license = { text = "MIT" }
keywords = ["geniuslib", "clash of clans", "clash api", "coc", "clashgenius"]
classifiers = ["Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Natural Language :: Portuguese",
    "Operating System :: OS Independent",]
dependencies = ["aiohttp", "orjson"]
[project.urls]
documentation = "https://github.com/AkumaHalls/GeniusLib"
repository = "https://github.com/AkumaHalls/GeniusLib"

[project.optional-dependencies]
docs = ["sphinx",
    "sphinx_rtd_theme",
    "sphinxcontrib_trio",
    "autodocsumm",
]

[tool.setuptools]
packages = ["geniuslib", "geniuslib.ext.discordlinks", "geniuslib.static", "geniuslib.ext.triggers"]
include-package-data = true

[tool.setuptools.package-data]
geniuslib = ["events.pyi", "static/*", "static/assets/**/*"]
